<resources>
    <string name="app_name">LearnGermany</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="der_upper">Der</string>
    <string name="die_upper">Die</string>
    <string name="das_upper">Das</string>
    <string name="der_lower">der</string>
    <string name="die_lower">die</string>
    <string name="das_lower">das</string>
    <string name="both_words_warning">Please Make Sure You Have Entered Both Words.</string>
    <string name="word_added_notification">Word Has Been Added To Your Quiz.</string>
    <string name="word_deleted_notification">Word Has Been Deleted</string>
    <string name="quiz_title_notification">Please Make Sure You Have Entered Your Quiz Title</string>
    <string name="quiz_size_notification">Please Make Sure You Have At Least 5 Words In Your Quiz</string>
    <string name="quiz_finished">Your Quiz Has Been Added To Your Account</string>
    <string name="title_length_notification">Please Make Sure Your Title Is At Least 6 Characters Long</string>
    <string name="username_no_value_notification">Please Enter Your Username</string>
    <string name="username_length_notification">Please Make Sure Your Username Is At Least 6 Characters Long And No Longer Than 24 Characters</string>
    <string name="username_exists_notification">There Is Already User With This Username</string>
    <string name="play_hint">German translation of the word above</string>
    <string name="play_congratulations">Congratulations, you have finished your quiz</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="log_in">LOG IN</string>
    <string name="confirm_your_password">Confirm Your Password</string>
    <string name="register">REGISTER</string>
    <string name="menu_quizzes">Quizzes</string>
    <string name="menu_find_quizzes">Find quizzes</string>
    <string name="menu_add_quiz">Add quiz</string>
    <string name="menu_settings">Settings</string>
    <string name="words_left">Words left:</string>
    <string name="a_lower">ä</string>
    <string name="o_lower">ö</string>
    <string name="u_lower">ü</string>
    <string name="B_lower">ß</string>
    <string name="exit_quiz">Exit quiz</string>
    <string name="next_word">Next word</string>
    <string name="cancel_word">Cancel word</string>
    <string name="check_word">Check word</string>
    <string name="upper_case">Upper case</string>
    <string name="quiz_title_hint">Quiz title</string>
    <string name="finish_quiz_description">Finish quiz</string>
    <string name="english_word">English word</string>
    <string name="translates_to">Translates To:</string>
    <string name="german_word">German word</string>
    <string name="list_of_your_words">List Of Your Words</string>
    <string name="add_word">Add word</string>
    <string name="learn_german_words">Learn German Words</string>
    <string name="without_abc">Without ABC Quizzes That Make Monkey Out Of You</string>
    <string name="please_enter_your_username">Please Enter Your Username</string>
    <string name="it_will_be_displayed_username">It Will Be Displayed In Application Next To Your Quizzes</string>
    <string name="username">Username</string>
    <string name="set_username">Set Username</string>
    <string name="play_quiz">Play quiz</string>
    <string name="delete_word">Delete word</string>
    <string name="dash">-</string>


</resources>