<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/add_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/toolbar">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <EditText
                    android:id="@+id/add_title"
                    style="@style/TextInput_ListItemTitles_ImportantText_Snippet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="60dp"
                    android:autofillHints=""
                    android:background="@drawable/quiz_title"
                    android:elevation="4dp"
                    android:hint="@string/quiz_title_hint"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:textColorHint="@color/lightestGrey" />

                <ImageButton
                    android:id="@+id/add_finish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="15dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/finish_quiz_description"
                    android:src="@drawable/ic_baseline_check_24" />

            </RelativeLayout>


        </androidx.appcompat.widget.Toolbar>

        <EditText
            android:id="@+id/add_english"
            style="@style/TextInput_ListItemTitles_ImportantText_Snippet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/add_toolbar"
            android:layout_marginStart="14dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="14dp"
            android:autofillHints="no"
            android:background="@drawable/edit_text"
            android:elevation="6dp"
            android:hint="@string/english_word"
            android:inputType="text"
            android:maxLines="1"
            android:padding="10dp" />

        <TextView
            android:id="@+id/translates"
            style="@style/Paragraph_Secondary_Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/add_english"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:background="@android:color/transparent"
            android:text="@string/translates_to"
            android:textColor="@color/text" />

        <EditText
            android:id="@+id/add_german"
            style="@style/TextInput_ListItemTitles_ImportantText_Snippet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/translates"
            android:layout_marginStart="14dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="14dp"
            android:autofillHints="no"
            android:background="@drawable/edit_text"
            android:elevation="6dp"
            android:hint="@string/german_word"
            android:inputType="text"
            android:maxLines="1"
            android:padding="10dp" />

        <LinearLayout
            android:id="@+id/specialChars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/add_german"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/add_a"
                style="@style/Button_Tab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:text="@string/a_lower"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/add_o"
                style="@style/Button_Tab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:text="@string/o_lower"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/add_u"
                style="@style/Button_Tab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:text="@string/u_lower"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/add_B"
                style="@style/Button_Tab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:text="@string/B_lower"
                android:textAllCaps="false" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/derDieDas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/specialChars"
            android:layout_centerHorizontal="true"
            android:textAllCaps="false">

            <Button
                android:id="@+id/add_der"
                style="@style/Button_Tab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/der_lower"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/add_die"
                style="@style/Button_Tab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/die_lower"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/add_das"
                style="@style/Button_Tab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/das_lower"
                android:textAllCaps="false" />

        </LinearLayout>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/add_switch"
            style="@style/Button_Tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/derDieDas"
            android:layout_centerHorizontal="true"
            android:hint="@string/upper_case" />

        <ImageButton
            android:id="@+id/add_addButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/derDieDas"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/add_word"
            android:src="@drawable/ic_baseline_add_circle_48"
            android:tint="@color/primary" />

        <TextView
            android:id="@+id/add_notification"
            style="@style/notification"
            android:layout_alignParentBottom="true" />

    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/bottomNavigation">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/add_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/list_of_your_words"
                android:textSize="16sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/add_recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/add_list"
                android:layout_margin="4dp"
                android:elevation="6dp"
                tools:listitem="@layout/word_layout" />

        </RelativeLayout>


    </com.google.android.material.navigation.NavigationView>


</androidx.drawerlayout.widget.DrawerLayout>