<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuthFragments.RegisterFragment">


    <EditText
        android:id="@+id/register_email"
        style="@style/TextInput_ListItemTitles_ImportantText_Snippet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="14dp"
        android:autofillHints="email"
        android:background="@drawable/edit_text"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="15dp"
        android:elevation="6dp"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:padding="10dp" />


    <EditText
        android:id="@+id/register_password"
        style="@style/TextInput_ListItemTitles_ImportantText_Snippet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_email"
        android:layout_marginStart="14dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="14dp"
        android:autofillHints="password"
        android:background="@drawable/edit_text"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="15dp"
        android:elevation="6dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp" />

    <EditText
        android:id="@+id/register_confirm"
        style="@style/TextInput_ListItemTitles_ImportantText_Snippet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_password"
        android:layout_marginStart="14dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="14dp"
        android:autofillHints="password"
        android:background="@drawable/edit_text"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="15dp"
        android:elevation="6dp"
        android:hint="@string/confirm_your_password"
        android:inputType="textPassword"
        android:padding="10dp" />

    <Button
        android:id="@+id/register_button"
        style="@style/Button_Tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_confirm"
        android:layout_marginStart="14dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="14dp"
        android:background="@drawable/button"
        android:elevation="6dp"
        android:padding="10dp"
        android:text="@string/register" />

    <TextView
        android:id="@+id/register_notification"
        style="@style/notification"
        android:layout_alignParentBottom="true" />


</RelativeLayout>